Fixes issue with images from 'skills' section overlapping header

--- a/styles/main.css
+++ b/styles/main.css
@@ -69,6 +69,7 @@ header {
   position:fixed;
   top:0;
   width:100%;
+  z-index:9999;
 }
 header ul {
   float: right;
